@startuml
title <size: 30> IntegerValueActuator Class Diagram v5.1

note "<b>Only methods related to\n<b>IntegerValueActuator are represented" as 1

skinparam linetype ortho

interface Actuator <<Root>>{
    + getActuatorTypeID() : ActuatorTypeIDVO
    + getDeviceID() : DeviceIDVO
    + getActuatorName() : ActuatorNameVO
}

interface AggregateRoot{
    + getID() : DomainID
}

interface DomainID{
    + getID() : String
}

interface ValueObject<T> {
    + getValue() : T
}

interface ActuatorExternalService{
    + executeIntegerCommandSim(position : int) : boolean
}

interface Settings{
}

class IntegerValueActuator <<Entity>>{
    - actuatorID : ActuatorIDVO
    - actuatorName : ActuatorNameVO
    - actuatorTypeID : ActuatorTypeIDVO
    - deviceIDVO : DeviceIDVO
    - integerSettings : IntegerSettingsVO

    + IntegerValueActuator(actuatorName : ActuatorNameVO, actuatorTypeID : ActuatorTypeIDVO,\n deviceID : DeviceIDVO, settings : Settings)
    + executeCommand(simHardwareAct : SimHardwareAct, value : int) : String
    - isValueWithinLimits(value : int) : boolean
}


class SimHardwareAct {
}

class ActuatorNameVO <<Value Object>>{
    - actuatorName : String
    + ActuatorNameVO(actuatorName : String)
    + getValue() : String
}

class ActuatorIDVO <<Value Object>><<ID>>{
    - identifier : UUID
    + ActuatorIDVO(identifier : UUID)
}

class ActuatorTypeIDVO <<Value Object>><<ID>>{
    - actuatorTypeID : String
    + ActuatorTypeIDVO(actuatorTypeID : String)
}

class DeviceIDVO <<Value Object>><<ID>>{
    - deviceID : UUID
    + DeviceIDVO(deviceID : UUID)
}

class IntegerSettingsVO <<Value Object>>{
    - lowerLimit : int
    - upperLimit : int

    + IntegerSettingsVO(lowerLimit : String, upperLimit : String)
    + getValue() : Integer[]
    - validLimits(lowerLimit : int, upperLimit : int) : boolean
}


AggregateRoot <|-- Actuator
Actuator <|.. IntegerValueActuator
SimHardwareAct <.. IntegerValueActuator
ActuatorExternalService <|.. SimHardwareAct
ActuatorNameVO --* IntegerValueActuator : has a >
ActuatorIDVO --* IntegerValueActuator : has a >
ActuatorTypeIDVO --* IntegerValueActuator : has a >
DeviceIDVO --* IntegerValueActuator : has a >
IntegerSettingsVO --* IntegerValueActuator : has a >
ValueObject <|.. ActuatorNameVO
Settings <|.. IntegerSettingsVO
ValueObject <|-- Settings
DomainID <|.. ActuatorIDVO
DomainID <|.. ActuatorTypeIDVO
DomainID <|.. DeviceIDVO
@enduml